--- a/index.html
+++ b/index.html
@@ -22,9 +22,37 @@
                     </ul>
                 </div>
             </div>
-            <h1 class="title">Winning Real Estate Investing Group</h1>
+            <div>            
+                <h1 class="title">Winning Real Estate Investing Group</h1>
+            </div>
+            <h2 id="events">Events</h2>
             <div class="events">
-
+                <h3>Multi-Family Investing</h3>
+                <div class="event-box">
+                    <img class="event-img" src="https://images.unsplash.com/photo-1568369366985-373beced16ff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1297&q=80">
+                </div>
+                <h3>Single Family Investing</h3>
+                <div class="event-box">
+                    <img class="event-img" src="https://images.unsplash.com/photo-1598228723793-52759bba239c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80">
+                </div>
+                <h3>Shopping Center Investing</h3>
+                <div class="event-box">
+                    <img class="event-img" src="https://images.unsplash.com/photo-1575279099331-ab1894fc7b97?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8c2hvcHBpbmclMjBjZW50ZXJ8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60">
+                </div>
+                <h3>Hotel Investing</h3>
+                <div class="event-box">
+                    <img class="event-img" src="https://images.unsplash.com/photo-1546412414-e1885259563a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1287&q=80">
+                </div>
+            </div>
+            <h2 >Members</h2>
+            <div class="members" id="members">
+                <img src="mypic.jpg" class="my-pic">
+            </div>
+            <h2 id="about">About</h2>
+            <div>
+                <p>
+                    This is a website created by Jeremy Hinton. The technologies used include: css, html, vscode, gitbash, and github. I enjoyed building this website.
+                </p>
             </div>
         </body>
     </html>
